deploy: zya-han/zya-han.github.io-private@833a6383eefa6346c34489701d532dd6903082c0

--- a/sanguo-pocket-06/index.html
+++ b/sanguo-pocket-06/index.html
@@ -241,7 +241,7 @@
                 
                 <!-- End Toc -->
                 <div class="buy-button">
-  📕 [**삼국지포켓북6: 아이들의 놀이와 노래 PDF 구매하기**](https://buymeacoffee.com/zya.han/e/391102)
+  📕 <a href="https://buymeacoffee.com/zya.han/e/391102" target="_blank">삼국지포켓북6: 아이들의 놀이와 노래 PDF 구매하기</a>
 </div>
 
 <hr />
