deploy: zya-han/zya-han.github.io-private@e80260a9f94b80a7952dbc2a1dcdca144b33b135

--- a/sanguo-pocket-01/index.html
+++ b/sanguo-pocket-01/index.html
@@ -240,11 +240,9 @@
                 <!-- Toc if any -->
                 
                 <!-- End Toc -->
-                <blockquote>
-  <p>👉 <a href="https://buymeacoffee.com/zya.han/e/391051"><strong>삼국지포켓북1: 호칭어 가이드 PDF 구매하기</strong></a></p>
-</blockquote>
-
-<hr />
+                <div class="buy-button">
+  📕 <a href="https://buymeacoffee.com/zya.han/e/391051" target="_blank">삼국지포켓북1: 호칭어 가이드 PDF 구매하기</a>
+</div>
 
 <h3 id="삼국지포켓북이란">삼국지포켓북이란?</h3>
 
@@ -310,11 +308,9 @@
   <li>주아, 삼국지포켓북1: 호칭어 가이드. <a href="https://zya-han.github.io/sanguo-pocket-01/">https://zya-han.github.io/sanguo-pocket-01/</a></li>
 </ul>
 
-<hr />
-
-<blockquote>
-  <p>👉 <a href="https://buymeacoffee.com/zya.han/e/391051"><strong>삼국지포켓북1: 호칭어 가이드 PDF 구매하기</strong></a></p>
-</blockquote>
+<div class="buy-button">
+  📕 <a href="https://buymeacoffee.com/zya.han/e/391051" target="_blank">삼국지포켓북1: 호칭어 가이드 PDF 구매하기</a>
+</div>
 
             </div>
 
