--- a/sanguo-pocket-06/index.html
+++ b/sanguo-pocket-06/index.html
@@ -244,8 +244,6 @@
   📕 <a href="https://buymeacoffee.com/zya.han/e/391102" target="_blank">삼국지포켓북6: 아이들의 놀이와 노래 PDF 구매하기</a>
 </div>
 
-<hr />
-
 <h3 id="삼국지포켓북이란">삼국지포켓북이란?</h3>
 
 <p>《삼국지포켓북》 시리즈에서는 후한 말~삼국~서진 시대에 사람들이 어떻게 생활했는지를 알리고 있습니다.</p>
@@ -313,11 +311,9 @@
   <li>주아, 삼국지포켓북6: 아이들의 놀이와 노래. <a href="https://zya-han.github.io/sanguo-pocket-06/">https://zya-han.github.io/sanguo-pocket-06/</a></li>
 </ul>
 
-<hr />
-
-<blockquote>
-  <p>👉 <a href="https://buymeacoffee.com/zya.han/e/391102"><strong>삼국지포켓북6: 아이들의 놀이와 노래 PDF 구매하기</strong></a></p>
-</blockquote>
+<div class="buy-button">
+  📕 <a href="https://buymeacoffee.com/zya.han/e/391102" target="_blank">삼국지포켓북6: 아이들의 놀이와 노래 PDF 구매하기</a>
+</div>
 
             </div>
 
