--- a/sanguo-pocket-02/index.html
+++ b/sanguo-pocket-02/index.html
@@ -240,11 +240,9 @@
                 <!-- Toc if any -->
                 
                 <!-- End Toc -->
-                <blockquote>
-  <p>👉 <a href="https://buymeacoffee.com/zya.han/e/391061"><strong>삼국지포켓북2: 예의를 버리고 음식을 구하다 PDF 구매하기</strong></a></p>
-</blockquote>
-
-<hr />
+                <div class="buy-button">
+  📕 <a href="https://buymeacoffee.com/zya.han/e/391061" target="_blank">삼국지포켓북2: 예의를 버리고 음식을 구하다 PDF 구매하기</a>
+</div>
 
 <h3 id="삼국지포켓북이란">삼국지포켓북이란?</h3>
 
@@ -305,11 +303,9 @@
   <li>주아, 삼국지포켓북2: 예의를 버리고 음식을 구하다. <a href="https://zya-han.github.io/sanguo-pocket-02/">https://zya-han.github.io/sanguo-pocket-02/</a></li>
 </ul>
 
-<hr />
-
-<blockquote>
-  <p>👉 <a href="https://buymeacoffee.com/zya.han/e/391061"><strong>삼국지포켓북2: 예의를 버리고 음식을 구하다 PDF 구매하기</strong></a></p>
-</blockquote>
+<div class="buy-button">
+  📕 <a href="https://buymeacoffee.com/zya.han/e/391061" target="_blank">삼국지포켓북2: 예의를 버리고 음식을 구하다 PDF 구매하기</a>
+</div>
 
             </div>
 
