--- a/sanguo-pocket-03/index.html
+++ b/sanguo-pocket-03/index.html
@@ -240,11 +240,9 @@
                 <!-- Toc if any -->
                 
                 <!-- End Toc -->
-                <blockquote>
-  <p>👉 <a href="https://buymeacoffee.com/zya.han/e/391075"><strong>삼국지포켓북3: 향, 새로운 감각의 개척 PDF 구매하기</strong></a></p>
-</blockquote>
-
-<hr />
+                <div class="buy-button">
+  📕 <a href="https://buymeacoffee.com/zya.han/e/391075" target="_blank">삼국지포켓북3: 향, 새로운 감각의 개척 PDF 구매하기</a>
+</div>
 
 <h3 id="삼국지포켓북이란">삼국지포켓북이란?</h3>
 
@@ -314,11 +312,9 @@
   <li>주아, 삼국지포켓북3: 향, 새로운 감각의 개척. <a href="https://zya-han.github.io/sanguo-pocket-03/">https://zya-han.github.io/sanguo-pocket-03/</a></li>
 </ul>
 
-<hr />
-
-<blockquote>
-  <p>👉 <a href="https://buymeacoffee.com/zya.han/e/391075"><strong>삼국지포켓북3: 향, 새로운 감각의 개척 PDF 구매하기</strong></a></p>
-</blockquote>
+<div class="buy-button">
+  📕 <a href="https://buymeacoffee.com/zya.han/e/391075" target="_blank">삼국지포켓북3: 향, 새로운 감각의 개척 PDF 구매하기</a>
+</div>
 
             </div>
 
