--- a/sanguo-pocket-04/index.html
+++ b/sanguo-pocket-04/index.html
@@ -240,11 +240,9 @@
                 <!-- Toc if any -->
                 
                 <!-- End Toc -->
-                <blockquote>
-  <p>👉 <a href="https://buymeacoffee.com/zya.han/e/391085"><strong>삼국지포켓북4: 육형 부활 논의에 관한 시론 PDF 구매하기</strong></a></p>
-</blockquote>
-
-<hr />
+                <div class="buy-button">
+  📕 <a href="https://buymeacoffee.com/zya.han/e/391085" target="_blank">삼국지포켓북4: 육형 부활 논의에 관한 시론 PDF 구매하기</a>
+</div>
 
 <h3 id="삼국지포켓북이란">삼국지포켓북이란?</h3>
 
@@ -308,11 +306,9 @@
   <li>주아, 삼국지포켓북4: 육형 부활 논의에 관한 시론. <a href="https://zya-han.github.io/sanguo-pocket-04/">https://zya-han.github.io/sanguo-pocket-04/</a></li>
 </ul>
 
-<hr />
-
-<blockquote>
-  <p>👉 <a href="https://buymeacoffee.com/zya.han/e/391085"><strong>삼국지포켓북4: 육형 부활 논의에 관한 시론 PDF 구매하기</strong></a></p>
-</blockquote>
+<div class="buy-button">
+  📕 <a href="https://buymeacoffee.com/zya.han/e/391085" target="_blank">삼국지포켓북4: 육형 부활 논의에 관한 시론 PDF 구매하기</a>
+</div>
 
             </div>
 
