--- a/sanguo-pocket-05/index.html
+++ b/sanguo-pocket-05/index.html
@@ -240,11 +240,9 @@
                 <!-- Toc if any -->
                 
                 <!-- End Toc -->
-                <blockquote>
-  <p>👉 <a href="https://buymeacoffee.com/zya.han/e/391095"><strong>삼국지포켓북5: 의사와 음악가의 공통점은? PDF 구매하기</strong></a></p>
-</blockquote>
-
-<hr />
+                <div class="buy-button">
+  📕 <a href="https://buymeacoffee.com/zya.han/e/391095" target="_blank">삼국지포켓북5: 의사와 음악가의 공통점은? PDF 구매하기</a>
+</div>
 
 <h3 id="삼국지포켓북이란">삼국지포켓북이란?</h3>
 
@@ -310,11 +308,9 @@
   <li>주아, 삼국지포켓북5: 의사와 음악가의 공통점은?. <a href="https://zya-han.github.io/sanguo-pocket-05/">https://zya-han.github.io/sanguo-pocket-05/</a></li>
 </ul>
 
-<hr />
-
-<blockquote>
-  <p>👉 <a href="https://buymeacoffee.com/zya.han/e/391095"><strong>삼국지포켓북5: 의사와 음악가의 공통점은? PDF 구매하기</strong></a></p>
-</blockquote>
+<div class="buy-button">
+  📕 <a href="https://buymeacoffee.com/zya.han/e/391095" target="_blank">삼국지포켓북5: 의사와 음악가의 공통점은? PDF 구매하기</a>
+</div>
 
             </div>
 
