--- a/page5/index.html
+++ b/page5/index.html
@@ -399,7 +399,7 @@
                 <a class="text-dark" href="/sanguo-pocket-01/">삼국지포켓북 1. 호칭어 가이드 [무료 미리보기]</a>
                 
             </h2>
-            <h4 class="card-text">📕 삼국지포켓북1: 호칭어 가이드 PDF 구매하기 삼국지포켓북이란? 《삼국지포켓북》 시리즈에서는 후한 말~삼국~서진 시대에 사람들이 어떻게 생활했는지를 알리고 있습니다. 이 프로젝트의 주된 목표는 1차 및 동인 창작자들이 참고할 수 있는 정보를 제공하는...</h4>
+            <h4 class="card-text">삼국지포켓북1: 호칭어 가이드 PDF 구매하기 &lt;/div&gt; --- ### 삼국지포켓북이란? 《삼국지포켓북》 시리즈에서는 후한 말\~삼국\~서진 시대에 사람들이 어떻게 생활했는지를 알리고 있습니다. 이 프로젝트의 주된 목표는 1차 및 동인 창작자들이 참고할 수 있는...</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
