deploy: zya-han/zya-han.github.io-private@edf1e5e77f3e14542e750bd979806e4330996db6

--- a/sanguo-pocket-02/index.html
+++ b/sanguo-pocket-02/index.html
@@ -241,8 +241,11 @@
                 
                 <!-- End Toc -->
                 <div class="buy-button">
-  📕 <a href="https://buymeacoffee.com/zya.han/e/391061" target="_blank">삼국지포켓북2: 예의를 버리고 음식을 구하다 PDF 구매하기</a>
+    <a href="https://buymeacoffee.com/zya.han/e/391061" target="_blank">삼국지포켓북2: 예의를 버리고 음식을 구하다 PDF 구매하기 </a>
 </div>
+<p><br /></p>
+
+<hr />
 
 <h3 id="삼국지포켓북이란">삼국지포켓북이란?</h3>
 
@@ -303,9 +306,13 @@
   <li>주아, 삼국지포켓북2: 예의를 버리고 음식을 구하다. <a href="https://zya-han.github.io/sanguo-pocket-02/">https://zya-han.github.io/sanguo-pocket-02/</a></li>
 </ul>
 
+<hr />
+
 <div class="buy-button">
-  📕 <a href="https://buymeacoffee.com/zya.han/e/391061" target="_blank">삼국지포켓북2: 예의를 버리고 음식을 구하다 PDF 구매하기</a>
+    <a href="https://buymeacoffee.com/zya.han/e/391061" target="_blank">삼국지포켓북2: 예의를 버리고 음식을 구하다 PDF 구매하기 </a>
 </div>
+<p><br /></p>
+
 
             </div>
 
