--- a/sanguo-pocket-05/index.html
+++ b/sanguo-pocket-05/index.html
@@ -241,8 +241,11 @@
                 
                 <!-- End Toc -->
                 <div class="buy-button">
-  📕 <a href="https://buymeacoffee.com/zya.han/e/391095" target="_blank">삼국지포켓북5: 의사와 음악가의 공통점은? PDF 구매하기</a>
+    <a href="https://buymeacoffee.com/zya.han/e/391095" target="_blank">삼국지포켓북5: 의사와 음악가의 공통점은? PDF 구매하기 </a>
 </div>
+<p><br /></p>
+
+<hr />
 
 <h3 id="삼국지포켓북이란">삼국지포켓북이란?</h3>
 
@@ -308,9 +311,13 @@
   <li>주아, 삼국지포켓북5: 의사와 음악가의 공통점은?. <a href="https://zya-han.github.io/sanguo-pocket-05/">https://zya-han.github.io/sanguo-pocket-05/</a></li>
 </ul>
 
+<hr />
+
 <div class="buy-button">
-  📕 <a href="https://buymeacoffee.com/zya.han/e/391095" target="_blank">삼국지포켓북5: 의사와 음악가의 공통점은? PDF 구매하기</a>
+    <a href="https://buymeacoffee.com/zya.han/e/391095" target="_blank">삼국지포켓북5: 의사와 음악가의 공통점은? PDF 구매하기 </a>
 </div>
+<p><br /></p>
+
 
             </div>
 
