--- a/sanguo-pocket-06/index.html
+++ b/sanguo-pocket-06/index.html
@@ -241,8 +241,11 @@
                 
                 <!-- End Toc -->
                 <div class="buy-button">
-  📕 <a href="https://buymeacoffee.com/zya.han/e/391102" target="_blank">삼국지포켓북6: 아이들의 놀이와 노래 PDF 구매하기</a>
+    <a href="https://buymeacoffee.com/zya.han/e/391102" target="_blank">삼국지포켓북6: 아이들의 놀이와 노래 PDF 구매하기 </a>
 </div>
+<p><br /></p>
+
+<hr />
 
 <h3 id="삼국지포켓북이란">삼국지포켓북이란?</h3>
 
@@ -311,9 +314,13 @@
   <li>주아, 삼국지포켓북6: 아이들의 놀이와 노래. <a href="https://zya-han.github.io/sanguo-pocket-06/">https://zya-han.github.io/sanguo-pocket-06/</a></li>
 </ul>
 
+<hr />
+
 <div class="buy-button">
-  📕 <a href="https://buymeacoffee.com/zya.han/e/391102" target="_blank">삼국지포켓북6: 아이들의 놀이와 노래 PDF 구매하기</a>
+    <a href="https://buymeacoffee.com/zya.han/e/391102" target="_blank">삼국지포켓북6: 아이들의 놀이와 노래 PDF 구매하기 </a>
 </div>
+<p><br /></p>
+
 
             </div>
 
