--- a/sanguo-pocket-01/index.html
+++ b/sanguo-pocket-01/index.html
@@ -241,79 +241,83 @@
                 
                 <!-- End Toc -->
                 <div class="buy-button">
-    <a href="https://buymeacoffee.com/zya.han/e/391051" target="_blank">삼국지포켓북1: 호칭어 가이드 PDF 구매하기
-&lt;/div&gt;
-<br />
-  
+    <a href="https://buymeacoffee.com/zya.han/e/391051" target="_blank">삼국지포켓북1: 호칭어 가이드 PDF 구매하기 </a>
+</div>
+<p><br /></p>
 
----
+<hr />
 
-### 삼국지포켓북이란?
+<h3 id="삼국지포켓북이란">삼국지포켓북이란?</h3>
 
-《삼국지포켓북》 시리즈에서는 후한 말\~삼국\~서진 시대에 사람들이 어떻게 생활했는지를 알리고 있습니다.
+<p>《삼국지포켓북》 시리즈에서는 후한 말~삼국~서진 시대에 사람들이 어떻게 생활했는지를 알리고 있습니다.</p>
 
-이 프로젝트의 주된 목표는 1차 및 동인 창작자들이 참고할 수 있는 정보를 제공하는 것입니다. 특히 사소하지만 의외로 쏠쏠하게 써먹을 수 있는 사실을 발굴해서 영업하는 데 중점을 두고 있습니다.
+<p>이 프로젝트의 주된 목표는 1차 및 동인 창작자들이 참고할 수 있는 정보를 제공하는 것입니다. 특히 사소하지만 의외로 쏠쏠하게 써먹을 수 있는 사실을 발굴해서 영업하는 데 중점을 두고 있습니다.</p>
 
-그러면서도 각 소책자는 창작과 무관하게 그냥 읽어도 흥미로운 내용을 담고 있습니다. 특히, 《삼국지포켓북》에서는 아래와 같이 기존 삼국지 창작물에서 찾기 어려운 정보를 얻으실 수 있고, 사전지식이 없는 경우에도 읽는 데 큰 장벽이 없습니다.
+<p>그러면서도 각 소책자는 창작과 무관하게 그냥 읽어도 흥미로운 내용을 담고 있습니다. 특히, 《삼국지포켓북》에서는 아래와 같이 기존 삼국지 창작물에서 찾기 어려운 정보를 얻으실 수 있고, 사전지식이 없는 경우에도 읽는 데 큰 장벽이 없습니다.</p>
 
-1. “유 황숙”이라는 호칭은 연의의 창작인데요, 그렇다면 정사에서 사람들은 유비를 뭐라고 불렀을까요?
-1. 후한 시대에 고기 요리로 가장 대중적인 것은 무엇이었을까요?
-1. 위나라의 황제가 된 조비는 왜 손권에게 작두향을 바치라고 했을까요?
-1. 조조는 “협천자”로 정권을 잡고 제일 먼저 어떤 정책을 실시하려고 했을까요?
-1. 군웅할거 시대 군대에 군의관이 충분히 있었을까요? 병사들이 병들면 어떻게 했을까요?
-1. 삼국지에 나오는 아이들은 무슨 장난감을 가지고 놀았을까요?
+<ol>
+  <li>“유 황숙”이라는 호칭은 연의의 창작인데요, 그렇다면 정사에서 사람들은 유비를 뭐라고 불렀을까요?</li>
+  <li>후한 시대에 고기 요리로 가장 대중적인 것은 무엇이었을까요?</li>
+  <li>위나라의 황제가 된 조비는 왜 손권에게 작두향을 바치라고 했을까요?</li>
+  <li>조조는 “협천자”로 정권을 잡고 제일 먼저 어떤 정책을 실시하려고 했을까요?</li>
+  <li>군웅할거 시대 군대에 군의관이 충분히 있었을까요? 병사들이 병들면 어떻게 했을까요?</li>
+  <li>삼국지에 나오는 아이들은 무슨 장난감을 가지고 놀았을까요?</li>
+</ol>
 
-동시에, 모든 정보의 근거와 출처를 확실하게 명시했기 때문에 더 심화된 내용을 찾아보기에도 편리합니다. 참고한 자료의 범위는 역사서와 경서를 포함한 한문 원전, 국내외 학술지에 수록된 연구논문, 대학원의 학위논문, 정식 출판된 단행본이고, 인터넷 자료의 경우 대한민국 공공기관, 대만 국립중앙연구원, Chinese Text Project에서 공개한 데이터베이스만 사용했습니다. 구체적인 면면은 아래 샘플에 포함된 참고 문헌 목록에서 확인하실 수 있습니다.
+<p>동시에, 모든 정보의 근거와 출처를 확실하게 명시했기 때문에 더 심화된 내용을 찾아보기에도 편리합니다. 참고한 자료의 범위는 역사서와 경서를 포함한 한문 원전, 국내외 학술지에 수록된 연구논문, 대학원의 학위논문, 정식 출판된 단행본이고, 인터넷 자료의 경우 대한민국 공공기관, 대만 국립중앙연구원, Chinese Text Project에서 공개한 데이터베이스만 사용했습니다. 구체적인 면면은 아래 샘플에 포함된 참고 문헌 목록에서 확인하실 수 있습니다.</p>
 
- 
-### 삼국지포켓북1: 호칭어 가이드
+<h3 id="삼국지포켓북1-호칭어-가이드">삼국지포켓북1: 호칭어 가이드</h3>
 
-1권에서는 역사책 《삼국지》에 나오는 호칭·지칭 표현을 하나하나 수집하여 예문과 함께 쓰임새를 설명했습니다. 호칭어의 사용 양상이 삼국지 캐해석의 유용한 단서가 될 수 있다는 것을 보여줍니다.
+<p>1권에서는 역사책 《삼국지》에 나오는 호칭·지칭 표현을 하나하나 수집하여 예문과 함께 쓰임새를 설명했습니다. 호칭어의 사용 양상이 삼국지 캐해석의 유용한 단서가 될 수 있다는 것을 보여줍니다.</p>
 
-+ 관련 텀블벅 프로젝트: [https://tumblbug.com/books-of-han-2](https://tumblbug.com/books-of-han-2)
+<ul>
+  <li>관련 텀블벅 프로젝트: <a href="https://tumblbug.com/books-of-han-2">https://tumblbug.com/books-of-han-2</a></li>
+</ul>
 
-#### 분량
+<h4 id="분량">분량</h4>
 
-포켓북 사이즈(108mm*165mm) 129페이지
+<p>포켓북 사이즈(108mm*165mm) 129페이지</p>
 
-#### 표지
+<h4 id="표지">표지</h4>
 
 <figure class="image" style="text-align:center;">
     <img src="/assets/images/s1-cover-front.png" alt="삼국지포켓북 1. 호칭어 가이드 (주아 지음)" />
     <figcaption>삼국지포켓북 1. 호칭어 가이드 표지</figcaption>
 </figure>
 
+<h4 id="목차-본문-참고문헌-샘플">목차, 본문, 참고문헌 샘플</h4>
 
-#### 목차, 본문, 참고문헌 샘플
+<p><img src="/assets/images/s1-sample-1.png" alt="삼국지포켓북 1권 샘플 1" /><br />
+<img src="/assets/images/s1-sample-2.png" alt="삼국지포켓북 1권 샘플 2" /><br />
+<img src="/assets/images/s1-sample-3.png" alt="삼국지포켓북 1권 샘플 3" /><br />
+<img src="/assets/images/s1-sample-4.png" alt="삼국지포켓북 1권 샘플 4" /><br />
+<img src="/assets/images/s1-sample-5.png" alt="삼국지포켓북 1권 샘플 5" /><br />
+<img src="/assets/images/s1-sample-6.png" alt="삼국지포켓북 1권 샘플 6" /><br />
+<img src="/assets/images/s1-sample-7.png" alt="삼국지포켓북 1권 샘플 7" /><br />
+<img src="/assets/images/s1-sample-8.png" alt="삼국지포켓북 1권 샘플 8" /><br />
+<img src="/assets/images/s1-sample-9.png" alt="삼국지포켓북 1권 샘플 9" /></p>
 
-![삼국지포켓북 1권 샘플 1](/assets/images/s1-sample-1.png)<br />
-![삼국지포켓북 1권 샘플 2](/assets/images/s1-sample-2.png)<br />
-![삼국지포켓북 1권 샘플 3](/assets/images/s1-sample-3.png)<br />
-![삼국지포켓북 1권 샘플 4](/assets/images/s1-sample-4.png)<br />
-![삼국지포켓북 1권 샘플 5](/assets/images/s1-sample-5.png)<br />
-![삼국지포켓북 1권 샘플 6](/assets/images/s1-sample-6.png)<br />
-![삼국지포켓북 1권 샘플 7](/assets/images/s1-sample-7.png)<br />
-![삼국지포켓북 1권 샘플 8](/assets/images/s1-sample-8.png)<br />
-![삼국지포켓북 1권 샘플 9](/assets/images/s1-sample-9.png)
+<h4 id="주의사항">주의사항</h4>
 
-#### 주의사항
+<ul>
+  <li>이 책의 PDF 파일은 양도, 재배포, 재판매가 불가능합니다.</li>
+  <li>이 책의 내용을 학교 과제물, 학위논문 등 학술적인 목적에 사용하는 것을 금합니다.</li>
+  <li>이 책의 내용을 소설, 만화, 게임 등의 창작물에 활용하시는 경우 출처를 밝혀 주세요.</li>
+</ul>
 
-+ 이 책의 PDF 파일은 양도, 재배포, 재판매가 불가능합니다.
-+ 이 책의 내용을 학교 과제물, 학위논문 등 학술적인 목적에 사용하는 것을 금합니다.
-+ 이 책의 내용을 소설, 만화, 게임 등의 창작물에 활용하시는 경우 출처를 밝혀 주세요.
+<h4 id="인용-방법">인용 방법</h4>
 
-#### 인용 방법
+<ul>
+  <li>주아, 삼국지포켓북1: 호칭어 가이드. <a href="https://zya-han.github.io/sanguo-pocket-01/">https://zya-han.github.io/sanguo-pocket-01/</a></li>
+</ul>
 
-+ 주아, 삼국지포켓북1: 호칭어 가이드. [https://zya-han.github.io/sanguo-pocket-01/](https://zya-han.github.io/sanguo-pocket-01/)
-
----
+<hr />
 
 <div class="buy-button">
-    <a href="https://buymeacoffee.com/zya.han/e/391051" target="_blank">삼국지포켓북1: 호칭어 가이드 PDF 구매하기
-&lt;/div&gt;
-<br />
-  
-</a></div></a></div>
+    <a href="https://buymeacoffee.com/zya.han/e/391051" target="_blank">삼국지포켓북1: 호칭어 가이드 PDF 구매하기 </a>
+</div>
+<p><br /></p>
+
 
             </div>
 
