--- a/sanguo-pocket-03/index.html
+++ b/sanguo-pocket-03/index.html
@@ -241,8 +241,11 @@
                 
                 <!-- End Toc -->
                 <div class="buy-button">
-  📕 <a href="https://buymeacoffee.com/zya.han/e/391075" target="_blank">삼국지포켓북3: 향, 새로운 감각의 개척 PDF 구매하기</a>
+    <a href="https://buymeacoffee.com/zya.han/e/391075" target="_blank">삼국지포켓북3: 향, 새로운 감각의 개척 PDF 구매하기 </a>
 </div>
+<p><br /></p>
+
+<hr />
 
 <h3 id="삼국지포켓북이란">삼국지포켓북이란?</h3>
 
@@ -312,9 +315,13 @@
   <li>주아, 삼국지포켓북3: 향, 새로운 감각의 개척. <a href="https://zya-han.github.io/sanguo-pocket-03/">https://zya-han.github.io/sanguo-pocket-03/</a></li>
 </ul>
 
+<hr />
+
 <div class="buy-button">
-  📕 <a href="https://buymeacoffee.com/zya.han/e/391075" target="_blank">삼국지포켓북3: 향, 새로운 감각의 개척 PDF 구매하기</a>
+    <a href="https://buymeacoffee.com/zya.han/e/391075" target="_blank">삼국지포켓북3: 향, 새로운 감각의 개척 PDF 구매하기 </a>
 </div>
+<p><br /></p>
+
 
             </div>
 
