deploy: zya-han/zya-han.github.io-private@6aa9db13c4bb023ba4a039e83eeb52d49b7cc962

--- a/cao-cao-01/index.html
+++ b/cao-cao-01/index.html
@@ -244,9 +244,13 @@
 
 <p>조조가 스무 살에 낙양 북부위가 되어 치안을 담당하던 시절 환관 건석의 숙부를 때려 죽인 사건이 유명합니다. 그 몽둥이의 색깔까지 궁금하지는 않은데, 《삼국지》 주석에 적혀 있어서 그만 알아 버렸습니다.</p>
 
-<p>💡 <strong>이후 내용은 멤버십 전용 포스트에서 확인하실 수 있습니다.</strong></p>
+<h3 id="-이후-내용은-멤버십-전용-포스트에서-확인하실-수-있습니다">💡 이후 내용은 멤버십 전용 포스트에서 확인하실 수 있습니다.</h3>
 
-<p>👉 <a href="https://buymeacoffee.com/zya.han/cao-01-colorful">전체 보기</a></p>
+<div class="card-button my-4 text-center">
+    <a href="https://buymeacoffee.com/zya.han/cao-01-colorful" target="_blank" class="btn-card">
+      🔒 멤버십 가입하고 전체 보기
+    </a>
+</div>
 
             </div>
 
