deploy: zya-han/zya-han.github.io-private@a93d86a0ef9bb57c4a3ae1c8ee7c3dce66317d36

--- a/sanguo-pocket-02/index.html
+++ b/sanguo-pocket-02/index.html
@@ -245,7 +245,7 @@
                 
                 <!-- End Toc -->
                 <div class="buy-button">
-    <a href="https://buymeacoffee.com/zya.han/e/391061" target="_blank">삼국지포켓북2: 예의를 버리고 음식을 구하다 PDF 구매하기 </a>
+    <a href="https://buymeacoffee.com/zya.han/e/391061" target="_blank">📕 삼국지포켓북2: 예의를 버리고 음식을 구하다 PDF 구매하기 </a>
 </div>
 
 <h3 id="삼국지포켓북이란">삼국지포켓북이란?</h3>
@@ -308,7 +308,7 @@
 </ul>
 
 <div class="buy-button">
-    <a href="https://buymeacoffee.com/zya.han/e/391061" target="_blank">삼국지포켓북2: 예의를 버리고 음식을 구하다 PDF 구매하기 </a>
+    <a href="https://buymeacoffee.com/zya.han/e/391061" target="_blank">📕 삼국지포켓북2: 예의를 버리고 음식을 구하다 PDF 구매하기 </a>
 </div>
 
 
