--- a/sanguo-pocket-03/index.html
+++ b/sanguo-pocket-03/index.html
@@ -245,7 +245,7 @@
                 
                 <!-- End Toc -->
                 <div class="buy-button">
-    <a href="https://buymeacoffee.com/zya.han/e/391075" target="_blank">삼국지포켓북3: 향, 새로운 감각의 개척 PDF 구매하기 </a>
+    <a href="https://buymeacoffee.com/zya.han/e/391075" target="_blank">📕 삼국지포켓북3: 향, 새로운 감각의 개척 PDF 구매하기 </a>
 </div>
 
 <h3 id="삼국지포켓북이란">삼국지포켓북이란?</h3>
@@ -317,7 +317,7 @@
 </ul>
 
 <div class="buy-button">
-    <a href="https://buymeacoffee.com/zya.han/e/391075" target="_blank">삼국지포켓북3: 향, 새로운 감각의 개척 PDF 구매하기 </a>
+    <a href="https://buymeacoffee.com/zya.han/e/391075" target="_blank">📕 삼국지포켓북3: 향, 새로운 감각의 개척 PDF 구매하기 </a>
 </div>
 
 
