--- a/sanguo-pocket-04/index.html
+++ b/sanguo-pocket-04/index.html
@@ -245,7 +245,7 @@
                 
                 <!-- End Toc -->
                 <div class="buy-button">
-    <a href="https://buymeacoffee.com/zya.han/e/391085" target="_blank">삼국지포켓북4: 육형 부활 논의에 관한 시론 PDF 구매하기 </a>
+    <a href="https://buymeacoffee.com/zya.han/e/391085" target="_blank">📕 삼국지포켓북4: 육형 부활 논의에 관한 시론 PDF 구매하기 </a>
 </div>
 
 <h3 id="삼국지포켓북이란">삼국지포켓북이란?</h3>
@@ -311,7 +311,7 @@
 </ul>
 
 <div class="buy-button">
-    <a href="https://buymeacoffee.com/zya.han/e/391085" target="_blank">삼국지포켓북4: 육형 부활 논의에 관한 시론 PDF 구매하기 </a>
+    <a href="https://buymeacoffee.com/zya.han/e/391085" target="_blank">📕 삼국지포켓북4: 육형 부활 논의에 관한 시론 PDF 구매하기 </a>
 </div>
 
 
