--- a/sanguo-pocket-06/index.html
+++ b/sanguo-pocket-06/index.html
@@ -245,7 +245,7 @@
                 
                 <!-- End Toc -->
                 <div class="buy-button">
-    <a href="https://buymeacoffee.com/zya.han/e/391102" target="_blank">삼국지포켓북6: 아이들의 놀이와 노래 PDF 구매하기 </a>
+    <a href="https://buymeacoffee.com/zya.han/e/391102" target="_blank">📕 삼국지포켓북6: 아이들의 놀이와 노래 PDF 구매하기 </a>
 </div>
 
 <h3 id="삼국지포켓북이란">삼국지포켓북이란?</h3>
@@ -316,7 +316,7 @@
 </ul>
 
 <div class="buy-button">
-    <a href="https://buymeacoffee.com/zya.han/e/391102" target="_blank">삼국지포켓북6: 아이들의 놀이와 노래 PDF 구매하기 </a>
+    <a href="https://buymeacoffee.com/zya.han/e/391102" target="_blank">📕 삼국지포켓북6: 아이들의 놀이와 노래 PDF 구매하기 </a>
 </div>
 
 
