deploy: zya-han/zya-han.github.io-private@1eb6b6b233741197198d034d4b8bd43fcad85cf6

--- a/page13/index.html
+++ b/page13/index.html
@@ -531,6 +531,7 @@
   
     <a href="/">1</a>
   
+    <a href="/">1</a>
     <span class="ellipsis">…</span>
   
     
@@ -546,6 +547,7 @@
     
   
     <span class="ellipsis">…</span>
+    <a href="/page14/">14</a>
   
     <a href="/page14/">14</a>
   
