--- a/page14/index.html
+++ b/page14/index.html
@@ -516,6 +516,7 @@
   
     <a href="/">1</a>
   
+    <a href="/">1</a>
     <span class="ellipsis">…</span>
   
     
@@ -527,6 +528,7 @@
     
   
     <span class="ellipsis">…</span>
+    <a href="/page14/">14</a>
   
     <span class="page current">14</span>
   
