--- a/page3/index.html
+++ b/page3/index.html
@@ -517,6 +517,7 @@
   
     <a href="/">1</a>
   
+    <a href="/">1</a>
     <span class="ellipsis">…</span>
   
     
@@ -532,6 +533,7 @@
     
   
     <span class="ellipsis">…</span>
+    <a href="/page14/">14</a>
   
     <a href="/page14/">14</a>
   
