--- a/index.html
+++ b/index.html
@@ -987,6 +987,7 @@
   
     <span class="page current">1</span>
   
+    <a href="/">1</a>
     <span class="ellipsis">…</span>
   
     
@@ -994,6 +995,7 @@
     
   
     <span class="ellipsis">…</span>
+    <a href="/page14/">14</a>
   
     <a href="/page14/">14</a>
   
