--- a/page12/index.html
+++ b/page12/index.html
@@ -524,6 +524,7 @@
   
     <a href="/">1</a>
   
+    <a href="/">1</a>
     <span class="ellipsis">…</span>
   
     
@@ -543,6 +544,7 @@
     
   
     <span class="ellipsis">…</span>
+    <a href="/page14/">14</a>
   
     <a href="/page14/">14</a>
   
