--- a/page8/index.html
+++ b/page8/index.html
@@ -517,6 +517,7 @@
   
     <a href="/">1</a>
   
+    <a href="/">1</a>
     <span class="ellipsis">…</span>
   
     
@@ -536,6 +537,7 @@
     
   
     <span class="ellipsis">…</span>
+    <a href="/page14/">14</a>
   
     <a href="/page14/">14</a>
   
