deploy: zya-han/zya-han.github.io-private@d40e2bf7ccd81bfd5af75dd6b6b4a06b617ef014

--- a/page12/index.html
+++ b/page12/index.html
@@ -531,6 +531,7 @@
     
       <a href="/page14/">14</a>
     
+    <span class="ellipsis">…</span>
       <a href="/page14/">14</a>
     <a href="/page13/">Next »</a>
 </div>
