--- a/page14/index.html
+++ b/page14/index.html
@@ -514,8 +514,8 @@
     
       <a href="/page13/">13</a>
     
-      <span class="ellipsis">…</span>
-      <a href="/page14/">14</a>
+    <span class="ellipsis">…</span>
+      <span class="current">14</span>
 </div>
 </span>
 </div>
