--- a/page12/index.html
+++ b/page12/index.html
@@ -532,6 +532,7 @@
       <a href="/page14/">14</a>
     
     <a href="/page14/">14</a>
+    <a href="/page14/">14</a>
     <a href="/page13/">Next »</a>
 </div>
 </span>
