--- a/taoyao-oc/index.html
+++ b/taoyao-oc/index.html
@@ -247,8 +247,6 @@
                 <p>아래의 시 원문을 상고한어로 전사하고 멜로디를 지어서 노래를 불렀습니다.</p>
 
 <blockquote>
-  <p>《시경·국풍·주남》 〈도요〉(桃夭)</p>
-
   <p>桃之夭夭、 복사나무 소담하니<br />
 灼灼其華。 찬란하게 꽃이 핀다<br />
 之子于歸、 이 아이가 시집가니<br />
@@ -262,12 +260,13 @@
   <p>桃之夭夭、 복사나무 소담하니<br />
 其葉蓁蓁。나뭇잎도 우거진다<br />
 之子于歸、 이 아이가 시집가니<br />
-宜其家人。 온가족이 화목하다</p>
+宜其家人。 온가족이 화목하다
+<cite>《시경·국풍·주남》 〈도요〉(桃夭)</cite></p>
 </blockquote>
 
 <p>《자살하기에는 너무 늦어 버려서》 〈2-3. 복숭아나무 소담하고〉와도 관련이 있습니다.</p>
 
-<h3 id="-노래-영상-미리-보기">🎵 노래 영상 미리 보기</h3>
+<h3 id="-노래-영상">🎵 노래 영상</h3>
 
 <p>작곡·노래: 주아</p>
 
