deploy: zya-han/zya-han.github.io-private@1962347eaad6db69021499c6c586c27fadd6597e

--- a/too-late-1-1/index.html
+++ b/too-late-1-1/index.html
@@ -270,13 +270,13 @@
 
 <hr />
 
-<p>허도에 머물고 있던 상서령尚書令 순욱은 사공司空의 도장으로 봉인된 편지<sup id="fnref:5"><a href="#fn:5" class="footnote" rel="footnote" role="doc-noteref">5</a></sup>를 먼저 받았다.</p>
+<p>허도에 머물고 있던 상서령<sup>尚書令</sup> 순욱은 사공<sup>司空</sup>의 도장으로 봉인된 편지<sup id="fnref:5"><a href="#fn:5" class="footnote" rel="footnote" role="doc-noteref">5</a></sup>를 먼저 받았다.</p>
 
-<p>‘공대를 허도로 보내니 영군令君<sup id="fnref:6"><a href="#fn:6" class="footnote" rel="footnote" role="doc-noteref">6</a></sup>은 내 뜻을 헤아려 처리하라.’</p>
+<p>‘공대를 허도로 보내니 영군<sup>令君</sup><sup id="fnref:6"><a href="#fn:6" class="footnote" rel="footnote" role="doc-noteref">6</a></sup>은 내 뜻을 헤아려 처리하라.’</p>
 
 <p>조조의 뜻을 헤아리기는 어렵지 않았다. 진궁을 죽이지 않되 도망치지도 못하게 해야 했다. 그리고 이것은 어디까지나 사공 조조의 사감이 반영된 의견이 아닌 상서령 순욱의 주청으로 발의되어야 했다.</p>
 
-<p>“신臣 욱彧이 남몰래<sup id="fnref:8"><a href="#fn:8" class="footnote" rel="footnote" role="doc-noteref">7</a></sup> 생각하기로는 일찌기 효문황제孝文皇帝께서 육형肉刑을 폐지하신 것은 태평한 시대를 맞아 베푸신 은덕이었습니다.<sup id="fnref:9"><a href="#fn:9" class="footnote" rel="footnote" role="doc-noteref">8</a></sup> 지금의 어지러운 시대에 이르러서는 사형은 너무 무겁고 생형은 너무 가벼우니 생형을 받은 자가 죄를 거듭 범하여 사형에 이르는 일이 많습니다.<sup id="fnref:10"><a href="#fn:10" class="footnote" rel="footnote" role="doc-noteref">9</a></sup> 법은 때에 맞게 제정하는 것인즉<sup id="fnref:11"><a href="#fn:11" class="footnote" rel="footnote" role="doc-noteref">10</a></sup> 사형의 일부를 참좌지斬左趾<sup id="fnref:12"><a href="#fn:12" class="footnote" rel="footnote" role="doc-noteref">11</a></sup>로 대체하여 죄인이 다시 법을 범하지 못하게 하면서도 죄인에게 살 길을 열어 주는 것이 오히려 은덕이 되리라고 감히 아룁니다.”</p>
+<p>“신<sup>臣</sup> 욱<sup>彧</sup>이 남몰래<sup id="fnref:8"><a href="#fn:8" class="footnote" rel="footnote" role="doc-noteref">7</a></sup> 생각하기로는 일찌기 효문황제<sup>孝文皇帝</sup>께서 육형<sup>肉刑</sup>을 폐지하신 것은 태평한 시대를 맞아 베푸신 은덕이었습니다.<sup id="fnref:9"><a href="#fn:9" class="footnote" rel="footnote" role="doc-noteref">8</a></sup> 지금의 어지러운 시대에 이르러서는 사형은 너무 무겁고 생형은 너무 가벼우니 생형을 받은 자가 죄를 거듭 범하여 사형에 이르는 일이 많습니다.<sup id="fnref:10"><a href="#fn:10" class="footnote" rel="footnote" role="doc-noteref">9</a></sup> 법은 때에 맞게 제정하는 것인즉<sup id="fnref:11"><a href="#fn:11" class="footnote" rel="footnote" role="doc-noteref">10</a></sup> 사형의 일부를 참좌지<sup>斬左趾</sup><sup id="fnref:12"><a href="#fn:12" class="footnote" rel="footnote" role="doc-noteref">11</a></sup>로 대체하여 죄인이 다시 법을 범하지 못하게 하면서도 죄인에게 살 길을 열어 주는 것이 오히려 은덕이 되리라고 감히 아룁니다.”</p>
 
 <p>상서대로 돌아와서 답장을 썼다.</p>
 
@@ -330,11 +330,11 @@
 
 <p>“참으로 감사하게도 혀를 자르지는 않으셔서요.”<sup id="fnref:23"><a href="#fn:23" class="footnote" rel="footnote" role="doc-noteref">21</a></sup></p>
 
-<p>“허세하고는. 세상에 경卿의 설득이 안 먹히는 사람도 있다는 건 지난 몇 년 동안 몸소 겪지 않았나?”</p>
+<p>“허세하고는. 세상에 경<sup>卿</sup>의 설득이 안 먹히는 사람도 있다는 건 지난 몇 년 동안 몸소 겪지 않았나?”</p>
 
 <p>“내 말을 안 들은 사람의 목이 시장에 걸렸는데<sup id="fnref:24"><a href="#fn:24" class="footnote" rel="footnote" role="doc-noteref">22</a></sup> 그보다 설득력 있는 근거가 어디 있나요.”</p>
 
-<p>“그러면 다른 사람을 못 만나게 내 곁에만 두면 되지. 안 그래도 군대가 하수河水<sup id="fnref:25"><a href="#fn:25" class="footnote" rel="footnote" role="doc-noteref">23</a></sup>를 건너기 전에 데리러 온 거야.”</p>
+<p>“그러면 다른 사람을 못 만나게 내 곁에만 두면 되지. 안 그래도 군대가 하수<sup>河水</sup><sup id="fnref:25"><a href="#fn:25" class="footnote" rel="footnote" role="doc-noteref">23</a></sup>를 건너기 전에 데리러 온 거야.”</p>
 
 <p>진궁은 크게 한숨을 쉬었다. 일부러 과장하는 듯도 했다.</p>
 
@@ -342,11 +342,11 @@
 
 <p>조조는 웃었다.</p>
 
-<p>“이런, 고孤를 군자로 보는 건가?”<sup id="fnref:27"><a href="#fn:27" class="footnote" rel="footnote" role="doc-noteref">25</a></sup></p>
+<p>“이런, 고<sup>孤</sup>를 군자로 보는 건가?”<sup id="fnref:27"><a href="#fn:27" class="footnote" rel="footnote" role="doc-noteref">25</a></sup></p>
 
 <p>진궁은 고개를 들고 조조를 똑바로 쳐다보았다.</p>
 
-<p>“군자가 안 되겠다면 스스로 고孤라고 칭하지나 말든가요.”</p>
+<p>“군자가 안 되겠다면 스스로 고<sup>孤</sup>라고 칭하지나 말든가요.”</p>
 
 <p>“귀여워.”</p>
 
@@ -354,12 +354,14 @@
 
 <hr />
 
-<p>처음 쓸 때는 진궁이 ‘형여刑餘의 몸’(👈 애초에 이 말을 넣기 위해 글을 쓰기 시작함) 운운하면서 자조할 예정이었는데 일단 백문루에서 살아 나가는 루트를 탄 이상 캐릭터에도 변화가 안 생길 수 없어서 감옥에서는 술기운이 올라서 순욱에게 비아냥거리고 발목이 잘린 뒤에는 그냥 막나가서 조조에게 뻗대고 아주 팔팔해져 버렸어… 😳</p>
+<p>처음 쓸 때는 진궁이 ‘형여<sup>刑餘</sup>의 몸’(👈 애초에 이 말을 넣기 위해 글을 쓰기 시작함) 운운하면서 자조할 예정이었는데 일단 백문루에서 살아 나가는 루트를 탄 이상 캐릭터에도 변화가 안 생길 수 없어서 감옥에서는 술기운이 올라서 순욱에게 비아냥거리고 발목이 잘린 뒤에는 그냥 막나가서 조조에게 뻗대고 아주 팔팔해져 버렸어… 😳</p>
+
+<h4 id="주석을-가장한-진정한-본문">주석을 가장한 진정한 본문</h4>
 
 <div class="footnotes" role="doc-endnotes">
   <ol>
     <li id="fn:1">
-      <p>《삼국지·위서》 〈장막전〉 주석 《전략》.  「請出就戮，以明軍法。」  “칼을 받고”는 륙戮의 의역이며, 사실 문장 전체를 더 공손한 말투로 옮기는 것이 맞습니다. <a href="#fnref:1" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
+      <p>《삼국지·위서》 〈장막전〉 주석 《전략》.  「請出就戮，以明軍法。」  “칼을 받고”는 륙<sup>戮</sup>의 의역이며, 사실 문장 전체를 더 공손한 말투로 옮기는 것이 맞습니다. <a href="#fnref:1" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
     <li id="fn:2">
       <p>《삼국지·위서》 〈장막전〉 주석 《전략》.  不可止。 대사가 아닌 서술이지만 그냥 썼습니다. <a href="#fnref:2" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
@@ -371,13 +373,13 @@
       <p>《한서》 〈서역전〉. 서역에서 황제의 명령을 무시하고 임의로 행동한 자들을 수도 장안으로 붙잡아 오는 묘사였습니다. <a href="#fnref:4" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
     <li id="fn:5">
-      <p>죽간을 사용한 한나라에서 도장이 쓰이던 방식입니다. 죽간을 돌돌 말아서 검檢이라는 송장을 붙인 뒤에 끈으로 묶고 진흙으로 봉한 위에 도장을 꾹 찍습니다. 도장에 인주를 묻혀서 찍는 것은 종이처럼 넓은 면을 사용할 때부터 가능했겠지요. <a href="#fnref:5" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
+      <p>죽간을 사용한 한나라에서 도장이 쓰이던 방식입니다. 죽간을 돌돌 말아서 검<sup>檢</sup>이라는 송장을 붙인 뒤에 끈으로 묶고 진흙으로 봉한 위에 도장을 꾹 찍습니다. 도장에 인주를 묻혀서 찍는 것은 종이처럼 넓은 면을 사용할 때부터 가능했겠지요. <a href="#fnref:5" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
     <li id="fn:6">
       <p>《삼국지·위서》 〈순욱전〉 주석 《전략》. 상서령 순욱을 지칭하는 말로 ‘순령군’이 쓰입니다. 이 글에서 성을 떼고 영군이라고만 한 이유는, 호칭어를 사용할 때 2인칭은 성을 붙이지 않는 경우가 많기 때문입니다. 예를 들어 조조에게 말할 때는 조조를 ‘명공’이라고 부르며 다른 사람에게 말할 때는 ‘조 공’이라고 가리키는 것이 일반적입니다. 절대적인 규칙은 아닙니다. <a href="#fnref:6" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
     <li id="fn:8">
-      <p>절竊에 해당하는 표현을 그냥 넣어 보았습니다. 신하가 황제에게 말할 때 겸손하게 쓰는 말입니다. <a href="#fnref:8" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
+      <p>절<sup>竊</sup>에 해당하는 표현을 그냥 넣어 보았습니다. 신하가 황제에게 말할 때 겸손하게 쓰는 말입니다. <a href="#fnref:8" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
     <li id="fn:9">
       <p>《사기》 〈효문본기〉. 서한 문제 13년(기원전 167년) 5월의 일입니다. <a href="#fnref:9" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
@@ -389,7 +391,7 @@
       <p>《사기》 〈조세가〉. 무령왕이 기마전을 위해 호복을 도입하면서 하는 말입니다. <a href="#fnref:11" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
     <li id="fn:12">
-      <p>발을 자르는 형벌은 월刖이라고도 하는데, 혹시라도 어감이 예쁘게 들릴까 봐 서한 때 실제로 존재한 형벌 명칭을 썼습니다. <a href="#fnref:12" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
+      <p>발을 자르는 형벌은 월<sup>刖</sup>이라고도 하는데, 혹시라도 어감이 예쁘게 들릴까 봐 서한 때 실제로 존재한 형벌 명칭을 썼습니다. <a href="#fnref:12" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
     <li id="fn:13">
       <p>《한서》 〈소망지전〉의 “소 태부는 강직한 사람인데 감옥에 가려고 하겠는가?”를 변형했습니다. 《삼국지》 주석에서 진궁의 성품이 강직했다고 서술하고 있습니다. 한편 《논형》 등에 따르면 한나라에서 신체가 훼손된 사람은 선친의 묘소에 갈 수가 없었습니다. 유교맨인 진궁에게 가장 큰 타격이었을 거예요… <a href="#fnref:13" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
@@ -416,7 +418,7 @@
       <p>《사기》 〈손자오기열전〉에 나오는 이야기입니다. 방연은 손빈의 재능을 시기해서 그의 두 발을 자르고 은거하게 만들지만 결국은 손빈의 전략에 패해서 전사합니다. <a href="#fnref:21" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
     <li id="fn:22">
-      <p>조비의 《전론》에 따르면 조조는 사한史漢—《사기》와 《한서》—등 여러 책을 두루 읽었다고 합니다. <a href="#fnref:22" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
+      <p>조비의 《전론》에 따르면 조조는 사한<sup>史漢</sup>—《사기》와 《한서》—등 여러 책을 두루 읽었다고 합니다. <a href="#fnref:22" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
     <li id="fn:23">
       <p>《사기》 〈장의열전〉입니다. 변설가 장의는 고문을 당하고도 자기 혀가 붙어 있으면 충분하다고 부인을 위로(?)합니다. <a href="#fnref:23" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
@@ -425,7 +427,7 @@
       <p>형을 받은 뒤에 진궁이 조조에게 말할 때 자기를 낮추지 않게 되었다는 설정입니다. 실제 《삼국지》에서는 얌전하게 자기를 이름으로 칭합니다. <a href="#fnref:24" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
     <li id="fn:25">
-      <p>하河가 아직 황하를 가리키는 고유명사이던 시절. <a href="#fnref:25" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
+      <p>하<sup>河</sup>가 아직 황하를 가리키는 고유명사이던 시절. <a href="#fnref:25" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
     <li id="fn:26">
       <p>《한서》 〈소망지전〉. <a href="#fnref:26" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
