deploy: zya-han/zya-han.github.io-private@e0cb86ca102ff96264e043565b387d8baa3d5755

--- a/women-s-names/index.html
+++ b/women-s-names/index.html
@@ -246,7 +246,7 @@
                 <!-- End Toc -->
                 <p>자<sup>字</sup>가 성인 남성의 전유물이라는 언급을 곳곳에서 볼 수 있습니다. <a href="https://ko.wikipedia.org/wiki/%EC%84%B1%EB%85%84%EC%9D%98_%EB%82%A0">위키피디아 한국어판 “성년의 날” 문서</a>에도 “‘자(字)’란 관례를 치른 남자가 갖는 이름이다.”라고 하고 있네요. 하지만 적어도 한나라 사람들이라면 남자만 자를 갖는다는 말을 이상하게 여겼을 것입니다.</p>
 
-<p>여성이 자를 가지는 것이 한나라에서 얼마나 보편적이었을까요? ~중국 간쑤 성에서 출토된 거연한간 중에서는 편지의 수신인으로 <a href="https://wcd-ihp.ascdc.sinica.edu.tw/woodslip/item.php?id1=H00407">유손<sup>幼孫</sup>·소부<sup>少婦</sup> 족하<sup>足下</sup></a>라고 남편과 아내의 자를 나란히 쓴 사례가 있습니다. 변방을 지키던 이들의 지위는 높지 않았습니다. 이런 경우에도, 혹은 이런 경우라서, 남편의 자만 쓴 것이 아니라 아내의 자까지 대등하게 썼던 것입니다.~</p>
+<p>여성이 자를 가지는 것이 한나라에서 얼마나 보편적이었을까요? <del>중국 간쑤 성에서 출토된 거연한간 중에서는 편지의 수신인으로 <a href="https://wcd-ihp.ascdc.sinica.edu.tw/woodslip/item.php?id1=H00407">유손<sup>幼孫</sup>·소부<sup>少婦</sup> 족하<sup>足下</sup></a>라고 남편과 아내의 자를 나란히 쓴 사례가 있습니다. 변방을 지키던 이들의 지위는 높지 않았습니다. 이런 경우에도, 혹은 이런 경우라서, 남편의 자만 쓴 것이 아니라 아내의 자까지 대등하게 썼던 것입니다.</del></p>
 
 <p>여성이 자를 갖는 사례가 상류층에 한정된 것이 아니었다는 사실은 《한서》에서도 확인할 수 있습니다.</p>
 
