deploy: zya-han/zya-han.github.io-private@65fb4fa9701ed91c567ba1ab950172464a47696f

--- a/naming-dogs/index.html
+++ b/naming-dogs/index.html
@@ -248,7 +248,7 @@
 
 <blockquote>
   <p>기린+파랑, 바람+까망, 번개+빨강, 용+밤색, 서리+하양, 사자+누렁처럼, 전근대 동아시아에서 <strong>동물의 이름을 지을 때 비유+색깔 패턴이 흔했던 것 같습니다.</strong> 더 거슬러 올라가자 《서경잡기》에 서한 문제의 명마 이름으로 자연류<sup>紫燕騮</sup>[제비+검붉은 말], 녹리총<sup>綠螭驄</sup>[용+희푸른 말]이 나오네요. <a href="https://t.co/ZeeogmnL2I">https://t.co/ZeeogmnL2I</a>
-<cite>https://twitter.com/chiclix/status/1256753239980044288</cite></p>
+<cite><a href="https://twitter.com/chiclix/status/1256753239980044288">https://twitter.com/chiclix/status/1256753239980044288</a></cite></p>
 </blockquote>
 
 <p>당시에는 《서경잡기》에 나온 여러 이름을 보고 추측했던 것인데, 나중에 후한 때 나온 《공총자》라는 책에 이 패턴이 명시된 것을 발견했습니다. 이 책에 따르면 <a href="https://ctext.org/kongcongzi/zhi-jie#n285524">개와 말의 이름은 모두 모양과 색깔을 따서 지었다고 합니다</a>[犬馬之名皆因其形色而名焉].</p>
