deploy: zya-han/zya-han.github.io-private@4d544f79345a9296ae8b4cf1a4fcfca72751b5eb

--- a/women-s-names-supplement-1/index.html
+++ b/women-s-names-supplement-1/index.html
@@ -254,7 +254,7 @@
                 <!-- Toc if any -->
                 
                 <!-- End Toc -->
-                <p>3년 전에 〈한대 여성의 이름과 자〉라는 포스트에서 밝혔듯이, 한나라에서는 자(字)가 남성의 전유물이 아니었습니다. 게다가 지배계급 여성들만 자를 가진 것도 아니었고, 관비의 딸과 같이 낮은 신분의 여성들도 《한서》에 기재된 대화에서 자로 불리는 사례가 여러 건 있습니다.</p>
+                <p>3년 전에 〈<a href="/women-s-names/">한대 여성의 이름과 자</a>〉라는 포스트에서 밝혔듯이, 한나라에서는 자(字)가 남성의 전유물이 아니었습니다. 게다가 지배계급 여성들만 자를 가진 것도 아니었고, 관비의 딸과 같이 낮은 신분의 여성들도 《한서》에 기재된 대화에서 자로 불리는 사례가 여러 건 있습니다.</p>
 
 <p>이전까지 자가 남성의 전유물이라는 오해가 널리 퍼져 있던 것이 여성이 역사 속에서 제대로 조명되지 못한 현실과 전혀 무관하지는 않을 것입니다. 그러니 최근 한나라나 삼국 시대를 배경으로 하는 (특히 여성 창작자의) 창작물에서 여성 캐릭터를 만들 때 성명과 함께 자를 만들어 넣는 것도, (일단 이름과 별개로 자라는 고유명사가 존재한다는 사실이 오타쿠의 취향을 자극하고 캐릭터 사이의 관계성을 더 풍부하게 표현할 수 있기 때문이겠지만) 여성이 남성과 대등하고 주체적인 존재이기를 희망하고 강조하려는 의도가 전혀 없지만은 않을 것입니다.</p>
 
