--- a/women-s-names-supplement-2/index.html
+++ b/women-s-names-supplement-2/index.html
@@ -260,7 +260,7 @@
 
 <h2 id="답변">답변</h2>
 
-<p>전에 〈한대 여성의 이름과 자〉에서 《한서》의 여성 인명과 《후한서》의 여성 인명을 비교한 적이 있었는데, 여기서는 《한서》에서 군(君)으로 끝나는 인명의 사례를 좀 더 자세히 보겠습니다.</p>
+<p>전에 〈<a href="/women-s-names/">한대 여성의 이름과 자</a>〉에서 《한서》의 여성 인명과 《후한서》의 여성 인명을 비교한 적이 있었는데, 여기서는 《한서》에서 군(君)으로 끝나는 인명의 사례를 좀 더 자세히 보겠습니다.</p>
 
 <p>탁왕손의 딸 문군(文君), 허광한의 딸 평군(平君), 곽광의 딸 성군(成君) 등은 모두 인명입니다. 그 외에도 《한서》에는 강도왕 유건의 딸 세군(細君)이 나오고, 같은 시기 동방삭의 아내로 성을 알 수 없는 또 다른 ‘세군’이 있으며, 연왕 유단의 후궁으로 곽소군(郭昭君)과 조좌군(趙左君)이 등장합니다.</p>
 
