deploy: zya-han/zya-han.github.io-private@af9a998294a2903beb62bd07c4a6e3972a49a558

--- a/imperial-scents/index.html
+++ b/imperial-scents/index.html
@@ -433,6 +433,11 @@
                     </li>
                     
                     <li>
+                        <!-- <a class="smoothscroll" href="/tags#%ED%96%A5">#향</a> -->
+                        <a class="smoothscroll" href="/tags#향">#향</a>
+                    </li>
+                    
+                    <li>
                         <!-- <a class="smoothscroll" href="/tags#%ED%96%A5%EC%8A%B9">#향승</a> -->
                         <a class="smoothscroll" href="/tags#향승">#향승</a>
                     </li>
