--- a/knives-and-swords-in-hanshu/index.html
+++ b/knives-and-swords-in-hanshu/index.html
@@ -341,6 +341,11 @@
                         <a class="smoothscroll" href="/tags#칼">#칼</a>
                     </li>
                     
+                    <li>
+                        <!-- <a class="smoothscroll" href="/tags#%ED%95%9C%EC%84%9C">#한서</a> -->
+                        <a class="smoothscroll" href="/tags#한서">#한서</a>
+                    </li>
+                    
                 </ul>
             </div>
             <!-- End Tags -->
