--- a/musical-instruments-in-battle/index.html
+++ b/musical-instruments-in-battle/index.html
@@ -371,6 +371,11 @@
                     </li>
                     
                     <li>
+                        <!-- <a class="smoothscroll" href="/tags#%EC%9D%8C%EC%95%85">#음악</a> -->
+                        <a class="smoothscroll" href="/tags#음악">#음악</a>
+                    </li>
+                    
+                    <li>
                         <!-- <a class="smoothscroll" href="/tags#%EC%A7%95">#징</a> -->
                         <a class="smoothscroll" href="/tags#징">#징</a>
                     </li>
