--- a/on-historical-accuracy-1/index.html
+++ b/on-historical-accuracy-1/index.html
@@ -312,6 +312,11 @@
                     </li>
                     
                     <li>
+                        <!-- <a class="smoothscroll" href="/tags#%EA%B3%A0%EC%A6%9D%EC%98%A4%EB%A5%98">#고증오류</a> -->
+                        <a class="smoothscroll" href="/tags#고증오류">#고증오류</a>
+                    </li>
+                    
+                    <li>
                         <!-- <a class="smoothscroll" href="/tags#%EC%83%81%EC%83%81%EB%A0%A5">#상상력</a> -->
                         <a class="smoothscroll" href="/tags#상상력">#상상력</a>
                     </li>
