--- a/sanguo-pocket-02/index.html
+++ b/sanguo-pocket-02/index.html
@@ -376,6 +376,11 @@
                     </li>
                     
                     <li>
+                        <!-- <a class="smoothscroll" href="/tags#%EC%82%BC%EA%B5%AD%EC%A7%80%ED%8F%AC%EC%BC%93%EB%B6%81">#삼국지포켓북</a> -->
+                        <a class="smoothscroll" href="/tags#삼국지포켓북">#삼국지포켓북</a>
+                    </li>
+                    
+                    <li>
                         <!-- <a class="smoothscroll" href="/tags#%EC%9D%8C%EC%8B%9D">#음식</a> -->
                         <a class="smoothscroll" href="/tags#음식">#음식</a>
                     </li>
