--- a/sanguo-pocket-06/index.html
+++ b/sanguo-pocket-06/index.html
@@ -389,6 +389,11 @@
                     </li>
                     
                     <li>
+                        <!-- <a class="smoothscroll" href="/tags#%EC%82%BC%EA%B5%AD%EC%A7%80%ED%8F%AC%EC%BC%93%EB%B6%81">#삼국지포켓북</a> -->
+                        <a class="smoothscroll" href="/tags#삼국지포켓북">#삼국지포켓북</a>
+                    </li>
+                    
+                    <li>
                         <!-- <a class="smoothscroll" href="/tags#%EC%95%84%EB%8F%99">#아동</a> -->
                         <a class="smoothscroll" href="/tags#아동">#아동</a>
                     </li>
