--- a/sanguo-yanyi-07/index.html
+++ b/sanguo-yanyi-07/index.html
@@ -357,6 +357,11 @@
                         <a class="smoothscroll" href="/tags#한서">#한서</a>
                     </li>
                     
+                    <li>
+                        <!-- <a class="smoothscroll" href="/tags#%ED%98%B8%EC%B9%AD%EC%96%B4">#호칭어</a> -->
+                        <a class="smoothscroll" href="/tags#호칭어">#호칭어</a>
+                    </li>
+                    
                 </ul>
             </div>
             <!-- End Tags -->
