--- a/xun-yu-like-zifang/index.html
+++ b/xun-yu-like-zifang/index.html
@@ -372,6 +372,11 @@
                     </li>
                     
                     <li>
+                        <!-- <a class="smoothscroll" href="/tags#%EC%9E%A5%EB%9F%89">#장량</a> -->
+                        <a class="smoothscroll" href="/tags#장량">#장량</a>
+                    </li>
+                    
+                    <li>
                         <!-- <a class="smoothscroll" href="/tags#%EC%A1%B0%EC%A1%B0">#조조</a> -->
                         <a class="smoothscroll" href="/tags#조조">#조조</a>
                     </li>
