--- a/geunyeo/index.html
+++ b/geunyeo/index.html
@@ -397,6 +397,11 @@
                     </li>
                     
                     <li>
+                        <!-- <a class="smoothscroll" href="/tags#%EC%97%AC%EC%9E%90">#여자</a> -->
+                        <a class="smoothscroll" href="/tags#여자">#여자</a>
+                    </li>
+                    
+                    <li>
                         <!-- <a class="smoothscroll" href="/tags#%EC%9C%A0%ED%91%9C%EC%84%B1">#유표성</a> -->
                         <a class="smoothscroll" href="/tags#유표성">#유표성</a>
                     </li>
