--- a/liu-xiang-hated-beautiful-women/index.html
+++ b/liu-xiang-hated-beautiful-women/index.html
@@ -342,6 +342,11 @@
                     </li>
                     
                     <li>
+                        <!-- <a class="smoothscroll" href="/tags#%EC%97%AC%EC%9E%90">#여자</a> -->
+                        <a class="smoothscroll" href="/tags#여자">#여자</a>
+                    </li>
+                    
+                    <li>
                         <!-- <a class="smoothscroll" href="/tags#%EC%97%B4%EB%85%80%EC%A0%84">#열녀전</a> -->
                         <a class="smoothscroll" href="/tags#열녀전">#열녀전</a>
                     </li>
