--- a/sanguo-pocket-01/index.html
+++ b/sanguo-pocket-01/index.html
@@ -381,6 +381,11 @@
                     </li>
                     
                     <li>
+                        <!-- <a class="smoothscroll" href="/tags#%EC%82%BC%EA%B5%AD%EC%A7%80%ED%8F%AC%EC%BC%93%EB%B6%81">#삼국지포켓북</a> -->
+                        <a class="smoothscroll" href="/tags#삼국지포켓북">#삼국지포켓북</a>
+                    </li>
+                    
+                    <li>
                         <!-- <a class="smoothscroll" href="/tags#%EC%A0%84%EC%9E%90%EC%B1%85">#전자책</a> -->
                         <a class="smoothscroll" href="/tags#전자책">#전자책</a>
                     </li>
