--- a/sanguo-pocket-04/index.html
+++ b/sanguo-pocket-04/index.html
@@ -379,6 +379,11 @@
                     </li>
                     
                     <li>
+                        <!-- <a class="smoothscroll" href="/tags#%EC%82%BC%EA%B5%AD%EC%A7%80%ED%8F%AC%EC%BC%93%EB%B6%81">#삼국지포켓북</a> -->
+                        <a class="smoothscroll" href="/tags#삼국지포켓북">#삼국지포켓북</a>
+                    </li>
+                    
+                    <li>
                         <!-- <a class="smoothscroll" href="/tags#%EC%9C%A1%ED%98%95">#육형</a> -->
                         <a class="smoothscroll" href="/tags#육형">#육형</a>
                     </li>
