--- a/sanguo-pocket-05/index.html
+++ b/sanguo-pocket-05/index.html
@@ -381,6 +381,11 @@
                     </li>
                     
                     <li>
+                        <!-- <a class="smoothscroll" href="/tags#%EC%82%BC%EA%B5%AD%EC%A7%80%ED%8F%AC%EC%BC%93%EB%B6%81">#삼국지포켓북</a> -->
+                        <a class="smoothscroll" href="/tags#삼국지포켓북">#삼국지포켓북</a>
+                    </li>
+                    
+                    <li>
                         <!-- <a class="smoothscroll" href="/tags#%EC%9D%8C%EC%95%85">#음악</a> -->
                         <a class="smoothscroll" href="/tags#음악">#음악</a>
                     </li>
