--- a/song-ming-sachets/index.html
+++ b/song-ming-sachets/index.html
@@ -428,6 +428,11 @@
                     </li>
                     
                     <li>
+                        <!-- <a class="smoothscroll" href="/tags#%ED%96%A5">#향</a> -->
+                        <a class="smoothscroll" href="/tags#향">#향</a>
+                    </li>
+                    
+                    <li>
                         <!-- <a class="smoothscroll" href="/tags#%ED%96%A5%EB%82%AD">#향낭</a> -->
                         <a class="smoothscroll" href="/tags#향낭">#향낭</a>
                     </li>
