--- a/zongjiao/index.html
+++ b/zongjiao/index.html
@@ -331,6 +331,11 @@
                     </li>
                     
                     <li>
+                        <!-- <a class="smoothscroll" href="/tags#%EC%B4%9D%EA%B0%81%EB%A8%B8%EB%A6%AC">#총각머리</a> -->
+                        <a class="smoothscroll" href="/tags#총각머리">#총각머리</a>
+                    </li>
+                    
+                    <li>
                         <!-- <a class="smoothscroll" href="/tags#%ED%97%A4%EC%96%B4%EC%8A%A4%ED%83%80%EC%9D%BC">#헤어스타일</a> -->
                         <a class="smoothscroll" href="/tags#헤어스타일">#헤어스타일</a>
                     </li>
