--- a/c/fan3k/index.html
+++ b/c/fan3k/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="기타 삼국지 팬픽" />
     <meta name="twitter:description" content="역사책 《삼국지》 및 필기소설 기반으로 삼국지 등장인물들에 대한 팬픽을 씁니다." />
-    <meta name="twitter:image" content="https://zya-han.github.ioassets/images/wagon.jpeg" />
+    <meta name="twitter:image" content="https://zya-han.github.io/assets/images/wagon.jpeg" />
     <meta name="twitter:url" content="https://zya-han.github.io/category/기타-삼국지-팬픽/" />
   </head>
   <body>
