--- a/c/fiction/index.html
+++ b/c/fiction/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="소설" />
     <meta name="twitter:description" content="소설을 모아 놓았습니다." />
-    <meta name="twitter:image" content="https://zya-han.github.ioassets/images/plaque.jpg" />
+    <meta name="twitter:image" content="https://zya-han.github.io/assets/images/plaque.jpg" />
     <meta name="twitter:url" content="https://zya-han.github.io/category/소설/" />
   </head>
   <body>
