--- a/c/romance/index.html
+++ b/c/romance/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="삼국연의 읽기" />
     <meta name="twitter:description" content="소설 《삼국연의》 원문을 읽다가 눈에 띄는 부분을 기록해 놓습니다. 주로 사서 《삼국지》와 비교합니다." />
-    <meta name="twitter:image" content="https://zya-han.github.ioassets/images/lv-bu.jpg" />
+    <meta name="twitter:image" content="https://zya-han.github.io/assets/images/lv-bu.jpg" />
     <meta name="twitter:url" content="https://zya-han.github.io/category/삼국연의-읽기/" />
   </head>
   <body>
