--- a/c/tmi-cao/index.html
+++ b/c/tmi-cao/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="조맹덕의 TMI" />
     <meta name="twitter:description" content="삼국지에 나오는 위 무제 조조의 일상과 취향에 대한 고전의 기록을 조각조각 모았습니다. 유료 멤버십 한정으로 공개합니다." />
-    <meta name="twitter:image" content="https://zya-han.github.ioassets/images/cao-cao.jpeg" />
+    <meta name="twitter:image" content="https://zya-han.github.io/assets/images/cao-cao.jpeg" />
     <meta name="twitter:url" content="https://zya-han.github.io/category/조맹덕의-TMI/" />
   </head>
   <body>
