deploy: zya-han/zya-han.github.io-private@31cf761ea59699efbe04db01163edbd10b8ca8f1

--- a/c/qa3k/index.html
+++ b/c/qa3k/index.html
@@ -12,6 +12,11 @@
     <meta name="twitter:description" content="《삼국지》를 읽을 때 궁금하셨던 점을 질문해 주시면 답변을 드립니다. https://zya-han.github.io/sanguozhi-qna/ 문서를 참고해 주세요." />
     <meta name="twitter:image" content="https://zya-han.github.io/assets/images/title-image.jpeg" />
     <meta name="twitter:url" content="https://zya-han.github.io/category/삼국지-질의응답/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="삼국지 질의응답" />
+    <meta property="og:description" content="《삼국지》를 읽을 때 궁금하셨던 점을 질문해 주시면 답변을 드립니다. https://zya-han.github.io/sanguozhi-qna/ 문서를 참고해 주세요." />
+    <meta property="og:image" content="https://zya-han.github.io/assets/images/title-image.jpeg" />
+    <meta property="og:url" content="https://zya-han.github.io/category/삼국지-질의응답/" />
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/삼국지-질의응답/">여기로 이동</a>.</p>
