--- a/c/talk/index.html
+++ b/c/talk/index.html
@@ -12,6 +12,11 @@
     <meta name="twitter:description" content="감상 위주의 글." />
     <meta name="twitter:image" content="https://zya-han.github.io/assets/images/woman-figurine.png" />
     <meta name="twitter:url" content="https://zya-han.github.io/category/잡담/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="잡담" />
+    <meta property="og:description" content="감상 위주의 글." />
+    <meta property="og:image" content="https://zya-han.github.io/assets/images/woman-figurine.png" />
+    <meta property="og:url" content="https://zya-han.github.io/category/잡담/" />
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/잡담/">여기로 이동</a>.</p>
