--- a/c/essay/index.html
+++ b/c/essay/index.html
@@ -12,6 +12,11 @@
     <meta name="twitter:description" content="무엇인가를 제안하고 싶을 때 쓰는 글입니다." />
     <meta name="twitter:image" content="https://zya-han.github.io/assets/images/woman-figurine.png" />
     <meta name="twitter:url" content="https://zya-han.github.io/category/에세이/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="에세이" />
+    <meta property="og:description" content="무엇인가를 제안하고 싶을 때 쓰는 글입니다." />
+    <meta property="og:image" content="https://zya-han.github.io/assets/images/woman-figurine.png" />
+    <meta property="og:url" content="https://zya-han.github.io/category/에세이/" />
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/에세이/">여기로 이동</a>.</p>
