--- a/c/fiction/index.html
+++ b/c/fiction/index.html
@@ -12,6 +12,11 @@
     <meta name="twitter:description" content="소설을 모아 놓았습니다." />
     <meta name="twitter:image" content="https://zya-han.github.io/assets/images/plaque.jpg" />
     <meta name="twitter:url" content="https://zya-han.github.io/category/소설/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="소설" />
+    <meta property="og:description" content="소설을 모아 놓았습니다." />
+    <meta property="og:image" content="https://zya-han.github.io/assets/images/plaque.jpg" />
+    <meta property="og:url" content="https://zya-han.github.io/category/소설/" />
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/소설/">여기로 이동</a>.</p>
