--- a/c/oldchinese/index.html
+++ b/c/oldchinese/index.html
@@ -12,6 +12,11 @@
     <meta name="twitter:description" content="상고한어로 한문을 낭독합니다." />
     <meta name="twitter:image" content="https://zya-han.github.io/assets/images/woman-figurine.png" />
     <meta name="twitter:url" content="https://zya-han.github.io/category/상고한어/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="상고한어" />
+    <meta property="og:description" content="상고한어로 한문을 낭독합니다." />
+    <meta property="og:image" content="https://zya-han.github.io/assets/images/woman-figurine.png" />
+    <meta property="og:url" content="https://zya-han.github.io/category/상고한어/" />
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/상고한어/">여기로 이동</a>.</p>
