--- a/c/romance/index.html
+++ b/c/romance/index.html
@@ -12,6 +12,11 @@
     <meta name="twitter:description" content="소설 《삼국연의》 원문을 읽다가 눈에 띄는 부분을 기록해 놓습니다. 주로 사서 《삼국지》와 비교합니다." />
     <meta name="twitter:image" content="https://zya-han.github.io/assets/images/lv-bu.jpg" />
     <meta name="twitter:url" content="https://zya-han.github.io/category/삼국연의-읽기/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="삼국연의 읽기" />
+    <meta property="og:description" content="소설 《삼국연의》 원문을 읽다가 눈에 띄는 부분을 기록해 놓습니다. 주로 사서 《삼국지》와 비교합니다." />
+    <meta property="og:image" content="https://zya-han.github.io/assets/images/lv-bu.jpg" />
+    <meta property="og:url" content="https://zya-han.github.io/category/삼국연의-읽기/" />
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/삼국연의-읽기/">여기로 이동</a>.</p>
