deploy: zya-han/zya-han.github.io-private@e3cc789285e3f6dd02cfa991467a29d40ae5c438

--- a/too-late-2-2/index.html
+++ b/too-late-2-2/index.html
@@ -311,7 +311,7 @@
 
 <p>“잠꼬대로 명부<sup>明府</sup><sup id="fnref:1"><a href="#fn:1" class="footnote" rel="footnote" role="doc-noteref">1</a></sup>를 찾던데?”</p>
 
-<p>조조는 ‘명부’가 동군 태수 시절의 자기라고 생각한 듯했다. (2) 진궁이 그를 연주목으로 만들어 주면서 천하를 손에 넣고 패왕의 업을 이루라고 하던 때였으니까<sup id="fnref:2"><a href="#fn:2" class="footnote" rel="footnote" role="doc-noteref">2</a></sup> 흐뭇할 만도 하겠다.</p>
+<p>조조는 ‘명부’가 동군 태수 시절의 자기라고 생각한 듯했다. 진궁이 그를 연주목으로 만들어 주면서 천하를 손에 넣고 패왕의 업을 이루라고 하던 때였으니까<sup id="fnref:2"><a href="#fn:2" class="footnote" rel="footnote" role="doc-noteref">2</a></sup> 흐뭇할 만도 하겠다.</p>
 
 <p>“내가 그랬어요?”</p>
 
@@ -323,7 +323,7 @@
 
 <p>“밤중에 무슨 일이에요?”</p>
 
-<p>“(3) 일 년 중에 보름달이 제일 예쁜 날이 오늘이거든.”<sup id="fnref:3"><a href="#fn:3" class="footnote" rel="footnote" role="doc-noteref">3</a></sup></p>
+<p>“일 년 중에 보름달이 제일 예쁜 날이 오늘이거든.”<sup id="fnref:3"><a href="#fn:3" class="footnote" rel="footnote" role="doc-noteref">3</a></sup></p>
 
 <p>“여기선 안 보일 텐데요.”</p>
 
@@ -383,6 +383,10 @@
 
   
   
+  
+    <p class="translation-note" style="text-align: center; font-size: 1em; opacity: 0.7; margin: 2rem;">
+      此篇为韩文版。👉 <a href="/zh/too-late-2-2/">查看中文版</a>
+    </p>
   
 
 
