--- a/too-late-2-1/index.html
+++ b/too-late-2-1/index.html
@@ -387,6 +387,10 @@
   
   
   
+    <p class="translation-note" style="text-align: center; font-size: 1em; opacity: 0.7; margin: 2rem;">
+      此篇为韩文版。👉 <a href="/zh/too-late-2-1/">查看中文版</a>
+    </p>
+  
 
 
 
