--- a/too-late-1-6/index.html
+++ b/too-late-1-6/index.html
@@ -464,6 +464,10 @@
   
   
   
+    <p class="translation-note" style="text-align: center; font-size: 1em; opacity: 0.7; margin: 2rem;">
+      此篇为韩文版。👉 <a href="/zh/too-late-1-6/">查看中文版</a>
+    </p>
+  
 
 
 
