--- a/interpret-and-translate/index.html
+++ b/interpret-and-translate/index.html
@@ -337,8 +337,8 @@
 <p>주목할 점은 譯(역)이라는 말이 처음부터 interpret나 translate에 완전히 대응하지는 않았다는 것입니다. 적어도 진한 시대 지식인들은 그렇게 믿었습니다. 이 사실은 《여씨춘추》와 《예기》에서 확인할 수 있습니다.</p>
 
 <blockquote>
-  <p> 일반적으로 관을 쓰고 띠를 두르는 나라에서 배나 수레로 소통할 때는 **상역적제**를 쓰지 않고[凡冠帶之國，舟車之所通，不用**象譯狄鞮**] </p>
-  <p><cite> 《여씨춘추》 〈신세〉  </cite></p>
+  <p>일반적으로 관을 쓰고 띠를 두르는 나라에서 배나 수레로 소통할 때는 <strong>상역적제</strong>를 쓰지 않고[凡冠帶之國，舟車之所通，不用<strong>象譯狄鞮</strong>]
+<cite> 《여씨춘추》 〈신세〉  </cite></p>
 </blockquote>
 
 <p>먼저 《여씨춘추》에 따르면 중화에 속하는 나라들끼리 소통할 때는 ‘상역적제’(象譯狄鞮)를 쓰지 않는다고 했는데, 이것은 상(象), 역(譯), 적제(狄鞮) 세 요소를 나열한 것입니다. 즉, 역이 단독으로 쓰이지 않고 상 및 적제와 함께 나왔습니다.</p>
