deploy: zya-han/zya-han.github.io-private@4bd295a7e96b0ac9af8da3aeabc416457c9592df

--- a/404.html
+++ b/404.html
@@ -17,13 +17,13 @@
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https:/zya-han.github.io/assets/images/title-image.jpeg">
+<meta name="twitter:image" content="https:/zya-han.github.io/assets/images/cards/chengyun.jpg">
 <meta name="twitter:title" content="404">
 <meta name="twitter:description" content="">
 <meta name="twitter:url" content="https://zya-han.github.io/404.html">
 
 <!-- Open Graph -->
-<meta property="og:image" content="https:/zya-han.github.io/assets/images/title-image.jpeg">
+<meta property="og:image" content="https:/zya-han.github.io/assets/images/cards/chengyun.jpg">
 <meta property="og:title" content="404">
 <meta property="og:description" content="">
 <meta property="og:url" content="https://zya-han.github.io/404.html">
