--- a/liu-xiang-hated-beautiful-women/index.html
+++ b/liu-xiang-hated-beautiful-women/index.html
@@ -439,7 +439,7 @@
         <article class="related-post-card">
           <a href="/intelligent-women/">
             
-              <img src="/assets/images/title-image.jpeg" alt="한나라의 똑똑한 여자들은 어떻게 되었을까?" class="related-post-thumb">
+              <img src="/assets/images/cards/chengyun.jpg" alt="한나라의 똑똑한 여자들은 어떻게 되었을까?" class="related-post-thumb">
             
             <div class="related-post-content">
               <h3 class="related-post-title">한나라의 똑똑한 여자들은 어떻게 되었을까?</h3>
