--- a/naming-dogs/index.html
+++ b/naming-dogs/index.html
@@ -585,7 +585,7 @@
         <article class="related-post-card">
           <a href="/wansui-and-qiansui/">
             
-              <img src="/assets/images/wansui.jpeg" alt="황제는 만세, 제후는 천세?" class="related-post-thumb">
+              <img src="/assets/images/cards/wansui.jpeg" alt="황제는 만세, 제후는 천세?" class="related-post-thumb">
             
             <div class="related-post-content">
               <h3 class="related-post-title">황제는 만세, 제후는 천세?</h3>
