--- a/summer-vacations/index.html
+++ b/summer-vacations/index.html
@@ -412,7 +412,7 @@
         <article class="related-post-card">
           <a href="/women-s-names/">
             
-              <img src="/assets/images/title-image.jpeg" alt="한대 여성의 이름과 자 [🔒 무료 미리보기]" class="related-post-thumb">
+              <img src="/assets/images/cards/chengyun.jpg" alt="한대 여성의 이름과 자 [🔒 무료 미리보기]" class="related-post-thumb">
             
             <div class="related-post-content">
               <h3 class="related-post-title">한대 여성의 이름과 자 [🔒 무료 미리보기]</h3>
