--- a/about.html
+++ b/about.html
@@ -17,13 +17,13 @@
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https:/zya-han.github.io/assets/images/title-image.jpeg">
+<meta name="twitter:image" content="https:/zya-han.github.io/assets/images/cards/chengyun.jpg">
 <meta name="twitter:title" content="주아">
 <meta name="twitter:description" content="">
 <meta name="twitter:url" content="https://zya-han.github.io/about">
 
 <!-- Open Graph -->
-<meta property="og:image" content="https:/zya-han.github.io/assets/images/title-image.jpeg">
+<meta property="og:image" content="https:/zya-han.github.io/assets/images/cards/chengyun.jpg">
 <meta property="og:title" content="주아">
 <meta property="og:description" content="">
 <meta property="og:url" content="https://zya-han.github.io/about">
