--- a/idioms-12/index.html
+++ b/idioms-12/index.html
@@ -407,7 +407,7 @@
         <article class="related-post-card">
           <a href="/mi-is-not-rice/">
             
-              <img src="/assets/images/rice.jpeg" alt="삼국지 해석의 실수: 米는 rice가 아니다" class="related-post-thumb">
+              <img src="/assets/images/cards/rice.jpeg" alt="삼국지 해석의 실수: 米는 rice가 아니다" class="related-post-thumb">
             
             <div class="related-post-content">
               <h3 class="related-post-title">삼국지 해석의 실수: 米는 rice가 아니다</h3>
