--- a/intelligent-women/index.html
+++ b/intelligent-women/index.html
@@ -17,13 +17,13 @@
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https:/zya-han.github.io/assets/images/title-image.jpeg">
+<meta name="twitter:image" content="https:/zya-han.github.io/assets/images/cards/chengyun.jpg">
 <meta name="twitter:title" content="한나라의 똑똑한 여자들은 어떻게 되었을까?">
 <meta name="twitter:description" content="한나라 때 여사(女士)의 기준은 어떠했나요? 남성 지식인과 대등하거나 그보다 뛰어난 역량을 증명해야 여사로 인정받았는지, 혹은 그보다 덜해도 ‘여자치고는 똑똑하네’라며 여사로 간주했는지 궁금합니다.">
 <meta name="twitter:url" content="https://zya-han.github.io/intelligent-women/">
 
 <!-- Open Graph -->
-<meta property="og:image" content="https:/zya-han.github.io/assets/images/title-image.jpeg">
+<meta property="og:image" content="https:/zya-han.github.io/assets/images/cards/chengyun.jpg">
 <meta property="og:title" content="한나라의 똑똑한 여자들은 어떻게 되었을까?">
 <meta property="og:description" content="한나라 때 여사(女士)의 기준은 어떠했나요? 남성 지식인과 대등하거나 그보다 뛰어난 역량을 증명해야 여사로 인정받았는지, 혹은 그보다 덜해도 ‘여자치고는 똑똑하네’라며 여사로 간주했는지 궁금합니다.">
 <meta property="og:url" content="https://zya-han.github.io/intelligent-women/">
@@ -285,7 +285,7 @@
             </div>
 
 			<!-- Post Featured Image -->
-			<!-- <img class="featured-image img-fluid" src="https://zya-han.github.io/assets/images/title-image.jpeg" alt="한나라의 똑똑한 여자들은 어떻게 되었을까?"> -->
+			<!-- <img class="featured-image img-fluid" src="https://zya-han.github.io/assets/images/cards/chengyun.jpg" alt="한나라의 똑똑한 여자들은 어떻게 되었을까?"> -->
             <!-- End Featured Image -->
 
             <!-- Post Content -->
