deploy: zya-han/zya-han.github.io-private@54437c34df1d7c285edc0bc70f24bb32c92660b1

--- a/armed-women/index.html
+++ b/armed-women/index.html
@@ -430,7 +430,7 @@
         <article class="related-post-card">
           <a href="/mad-women/">
             
-              <img src="/assets/images/bi.jpeg" alt="한나라의 광녀(狂女)들" class="related-post-thumb">
+              <img src="/assets/images/cards/bi.jpeg" alt="한나라의 광녀(狂女)들" class="related-post-thumb">
             
             <div class="related-post-content">
               <h3 class="related-post-title">한나라의 광녀(狂女)들</h3>
