--- a/cao-cao-11/index.html
+++ b/cao-cao-11/index.html
@@ -382,7 +382,7 @@
         <article class="related-post-card">
           <a href="/sanguo-yanyi-07/">
             
-              <img src="/assets/images/lv-bu.jpg" alt="《삼국연의》 호칭어 노트 07: 삼국지 정사와 연의의 삼고초려 비교" class="related-post-thumb">
+              <img src="/assets/images/cards/lv-bu.jpg" alt="《삼국연의》 호칭어 노트 07: 삼국지 정사와 연의의 삼고초려 비교" class="related-post-thumb">
             
             <div class="related-post-content">
               <h3 class="related-post-title">《삼국연의》 호칭어 노트 07: 삼국지 정사와 연의의 삼고초려 비교</h3>
