--- a/how-xun-yu-died/index.html
+++ b/how-xun-yu-died/index.html
@@ -17,13 +17,13 @@
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://zya-han.github.io/assets/images/mirror.jpeg">
+<meta name="twitter:image" content="https://zya-han.github.io/assets/images/cards/mirror.jpeg">
 <meta name="twitter:title" content="순욱은 과연 병으로 죽었을까?">
 <meta name="twitter:description" content="역사서에서 ‘근심으로 인해 죽다’를 어떻게 해석할 것인가?">
 <meta name="twitter:url" content="https://zya-han.github.io/how-xun-yu-died/">
 
 <!-- Open Graph -->
-<meta property="og:image" content="https://zya-han.github.io/assets/images/mirror.jpeg">
+<meta property="og:image" content="https://zya-han.github.io/assets/images/cards/mirror.jpeg">
 <meta property="og:title" content="순욱은 과연 병으로 죽었을까?">
 <meta property="og:description" content="역사서에서 ‘근심으로 인해 죽다’를 어떻게 해석할 것인가?">
 <meta property="og:url" content="https://zya-han.github.io/how-xun-yu-died/">
@@ -285,7 +285,7 @@
             </div>
 
 			<!-- Post Featured Image -->
-			<!-- <img class="featured-image img-fluid" src="https://zya-han.github.io/assets/images/mirror.jpeg" alt="순욱은 과연 병으로 죽었을까?"> -->
+			<!-- <img class="featured-image img-fluid" src="https://zya-han.github.io/assets/images/cards/mirror.jpeg" alt="순욱은 과연 병으로 죽었을까?"> -->
             <!-- End Featured Image -->
 
             <!-- Post Content -->
