--- a/idioms-04/index.html
+++ b/idioms-04/index.html
@@ -391,7 +391,7 @@
         <article class="related-post-card">
           <a href="/crown-and-carriage/">
             
-              <img src="/assets/images/qin-carriage.jpeg" alt="면류관과 승여: 후한시대에 황제를 상징한 사물은?" class="related-post-thumb">
+              <img src="/assets/images/cards/qin-chariot.jpg" alt="면류관과 승여: 후한시대에 황제를 상징한 사물은?" class="related-post-thumb">
             
             <div class="related-post-content">
               <h3 class="related-post-title">면류관과 승여: 후한시대에 황제를 상징한 사물은?</h3>
