--- a/xun-yu-s-extraordinary-appearance/index.html
+++ b/xun-yu-s-extraordinary-appearance/index.html
@@ -17,13 +17,13 @@
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://zya-han.github.io/assets/images/mirror.jpeg">
+<meta name="twitter:image" content="https://zya-han.github.io/assets/images/cards/mirror.jpeg">
 <meta name="twitter:title" content="순욱의 ‘기이한 겉모습’">
 <meta name="twitter:description" content="《삼국지》에서 말하는 기이(奇異)한 외모란?">
 <meta name="twitter:url" content="https://zya-han.github.io/xun-yu-s-extraordinary-appearance/">
 
 <!-- Open Graph -->
-<meta property="og:image" content="https://zya-han.github.io/assets/images/mirror.jpeg">
+<meta property="og:image" content="https://zya-han.github.io/assets/images/cards/mirror.jpeg">
 <meta property="og:title" content="순욱의 ‘기이한 겉모습’">
 <meta property="og:description" content="《삼국지》에서 말하는 기이(奇異)한 외모란?">
 <meta property="og:url" content="https://zya-han.github.io/xun-yu-s-extraordinary-appearance/">
@@ -285,7 +285,7 @@
             </div>
 
 			<!-- Post Featured Image -->
-			<!-- <img class="featured-image img-fluid" src="https://zya-han.github.io/assets/images/mirror.jpeg" alt="순욱의 ‘기이한 겉모습’"> -->
+			<!-- <img class="featured-image img-fluid" src="https://zya-han.github.io/assets/images/cards/mirror.jpeg" alt="순욱의 ‘기이한 겉모습’"> -->
             <!-- End Featured Image -->
 
             <!-- Post Content -->
@@ -414,7 +414,7 @@
         <article class="related-post-card">
           <a href="/yuan-shao-as-a-lady/">
             
-              <img src="/assets/images/han-beau-figurine.jpg" alt="체장부인(體長婦人)의 미궁: 원소는 도대체 어떻게 자랐나?" class="related-post-thumb">
+              <img src="/assets/images/cards/han-beau-figurine.jpg" alt="체장부인(體長婦人)의 미궁: 원소는 도대체 어떻게 자랐나?" class="related-post-thumb">
             
             <div class="related-post-content">
               <h3 class="related-post-title">체장부인(體長婦人)의 미궁: 원소는 도대체 어떻게 자랐나?</h3>
