--- a/beau/index.html
+++ b/beau/index.html
@@ -396,7 +396,7 @@
         <article class="related-post-card">
           <a href="/xun-yu-s-extraordinary-appearance/">
             
-              <img src="/assets/images/mirror.jpeg" alt="순욱의 ‘기이한 겉모습’" class="related-post-thumb">
+              <img src="/assets/images/cards/mirror.jpeg" alt="순욱의 ‘기이한 겉모습’" class="related-post-thumb">
             
             <div class="related-post-content">
               <h3 class="related-post-title">순욱의 ‘기이한 겉모습’</h3>
