--- a/mad-women/index.html
+++ b/mad-women/index.html
@@ -17,13 +17,13 @@
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:image" content="https://zya-han.github.io/assets/images/bi.jpeg">
+<meta name="twitter:image" content="https://zya-han.github.io/assets/images/cards/bi.jpeg">
 <meta name="twitter:title" content="한나라의 광녀(狂女)들">
 <meta name="twitter:description" content="광녀(狂女)란 한자 그대로 풀이하면 ‘미친 여자’라는 뜻입니다. 한자문화권에서 이 말이 최초로 발견되는 문헌은 바로 《한서》입니다. 〈왕망전 중〉에는 신나라를 세우고 황제가 된 왕망을 비난하는 ‘미친 여자’가 등장합니다.">
 <meta name="twitter:url" content="https://zya-han.github.io/mad-women/">
 
 <!-- Open Graph -->
-<meta property="og:image" content="https://zya-han.github.io/assets/images/bi.jpeg">
+<meta property="og:image" content="https://zya-han.github.io/assets/images/cards/bi.jpeg">
 <meta property="og:title" content="한나라의 광녀(狂女)들">
 <meta property="og:description" content="광녀(狂女)란 한자 그대로 풀이하면 ‘미친 여자’라는 뜻입니다. 한자문화권에서 이 말이 최초로 발견되는 문헌은 바로 《한서》입니다. 〈왕망전 중〉에는 신나라를 세우고 황제가 된 왕망을 비난하는 ‘미친 여자’가 등장합니다.">
 <meta property="og:url" content="https://zya-han.github.io/mad-women/">
@@ -285,7 +285,7 @@
             </div>
 
 			<!-- Post Featured Image -->
-			<!-- <img class="featured-image img-fluid" src="https://zya-han.github.io/assets/images/bi.jpeg" alt="한나라의 광녀(狂女)들"> -->
+			<!-- <img class="featured-image img-fluid" src="https://zya-han.github.io/assets/images/cards/bi.jpeg" alt="한나라의 광녀(狂女)들"> -->
             <!-- End Featured Image -->
 
             <!-- Post Content -->
@@ -421,7 +421,7 @@
         <article class="related-post-card">
           <a href="/yuan-shao-as-a-lady/">
             
-              <img src="/assets/images/han-beau-figurine.jpg" alt="체장부인(體長婦人)의 미궁: 원소는 도대체 어떻게 자랐나?" class="related-post-thumb">
+              <img src="/assets/images/cards/han-beau-figurine.jpg" alt="체장부인(體長婦人)의 미궁: 원소는 도대체 어떻게 자랐나?" class="related-post-thumb">
             
             <div class="related-post-content">
               <h3 class="related-post-title">체장부인(體長婦人)의 미궁: 원소는 도대체 어떻게 자랐나?</h3>
