--- a/real-zongjiao/index.html
+++ b/real-zongjiao/index.html
@@ -388,7 +388,7 @@
         <article class="related-post-card">
           <a href="/too-late-spinoff-hair/">
             
-              <img src="/assets/images/toolate.jpg" alt="외전. 《한서》 〈유림전〉에서 〈왕식전〉을 보세요" class="related-post-thumb">
+              <img src="/assets/images/cards/toolate.jpg" alt="외전. 《한서》 〈유림전〉에서 〈왕식전〉을 보세요" class="related-post-thumb">
             
             <div class="related-post-content">
               <h3 class="related-post-title">외전. 《한서》 〈유림전〉에서 〈왕식전〉을 보세요</h3>
